Buttons/wwwroot/css/phone.css
* {
    font-family: 'Helvetica', sans-serif;
}

html, body, main {
    width: 100%;
    height: 100%;
    box-sizing: border-box;
}

body {
    color: #999;
    background-color: #222;
    padding-top: 1rem;
}

.filled {
    width: 100%;
    height: 100%;
}

.flex-container {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100%;
    height: 100%;
}

button, .button, input[type=text], .fill-box {
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto 1rem auto;
}

button, .button, input[type=text] {
    width: calc(100vw - 2rem);
    box-sizing: border-box;

    font-size: 2.5rem;
    text-decoration: none;
    color: #999;
    background-color: #222;

    border: 5px solid #555;
    outline: none;
    border-radius: 10px;

    transition: 0.25s;
}

button, .button {
    height: 4rem;
    cursor: pointer;
}

button:hover, button:focus-visible, .button:hover, .button:focus-visible {
    color: #333;
    border-color: #999;
    background-color: #999;
}

button:active, .button:active {
    color: #333;
    border-color: #090;
    background-color: #090;

}

button[disabled], .button[disabled] {
    margin: 0;
    opacity: 0;
    height: 0;
    font-size: 0;
    cursor: default;
}

input[type=text] {
    height: 6rem;
    padding: 1rem;
}

input[type=text]:focus-visible {
    border-color: #999;
    outline: none;
}

.border {
    border: 5px solid #555;
    border-radius: 10px;
}

.fill-box {
    position: relative;

    flex: 1; /* filling remaining height */

    box-sizing: border-box;
    width: calc(100vw - 2rem);
}

.fill-box.scroll-box {
    overflow-y: auto;
    align-items: flex-start;
}

/* General Button */

.button-outer {
    position: relative;
    width: 100%;
    height: auto;
    aspect-ratio: 1;
    box-sizing: border-box;

    border-radius: 50%;
    overflow: hidden;
    border: 3px solid #248232;
    background-color: #fff;
}

.button-image {
    position: relative;
}

/* Overview */

.overview {
    width: 100%;
    min-height: 100%;
    padding: 1rem;
    box-sizing: border-box;

    display: flex;
    gap: 1rem;
    flex-wrap: wrap;
    align-content: flex-start;
}

.overview-item {
    width: min(50% - 0.5rem, 50vh);
    height: auto;
    aspect-ratio: 1;
}

.overview-item .button-outer {
    cursor: pointer;
}

.overview-item .button-outer[data-status=Uploaded] {
    border-color: #9e1922;
}

#detail-view {
    display: none;

    flex-direction: column;
    align-items: center;
    justify-content: space-between;

    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-sizing: border-box;
    padding: 1rem 1rem 0 1rem;

    background-color: rgba(0, 0, 0, 0.7);
    font-size: 1.5rem;
}

#detail-close {
    display: block;
    align-self: flex-end;

    color: #999;
    font-size: 2rem;
    text-decoration: none;
    cursor: pointer;
}

#detail-close:hover, #detail-close:focus-visible {
    color: #ccc;
}

.detail-button {
    width: min(100vw - 2rem, 50vh);
    height: auto;
    aspect-ratio: 1;
}

.detail-info {
    margin-bottom: 1rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

/* Create */

.fill-box label {
    color: #999;
    font-size: 3rem;
    display: block;
    height: 7rem;
    width: 15rem;
}

.file-icon {
    filter: invert(66%) sepia(0%) saturate(3239%) hue-rotate(229deg) brightness(98%) contrast(65%);
    display: inline;
    width: 3rem;
    height: 3rem;
}

.file-preview {
    opacity: 0;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    object-fit: contain;
}

.file-preview.visible {
    opacity: 1;
}

#file {
    opacity: 0;
    position: absolute;
    top: -5px;
    left: -5px;
    width: calc(100% + 10px);
    height: calc(100% + 10px);
}

/* Crop */

#crop-image {
    object-fit: contain;
    max-width: 100%;
}

.cropper-view-box, .cropper-face {
    border-radius: 50%;
}

span.cropper-view-box {
    outline: 3px solid #248232;
}

span.cropper-face {
    opacity: 1;
    background: radial-gradient(closest-side, rgba(255, 255, 255, 0.1) 0, rgba(255, 255, 255, 0.1) 81%, rgba(0, 0, 0, 0.5) 82%, rgba(0, 0, 0, 0.5) 100%);
}

/* Confirm */

.confirm-button-outer {
    width: min(100vw - 2rem, 50vh);
    height: min(100vw - 2rem, 50vh);
}

